--- a/app/assets/stylesheets/sidebar.css.scss
+++ b/app/assets/stylesheets/sidebar.css.scss
@@ -4,9 +4,9 @@
 
 .side-bar {
   float: right;
-  width: 27.3%;
-  min-width: 350px;
+  width: 300px;
   color: Black;
+  margin: 0;
 }
 
 .side-bar a {
